fix alignment of page heading and grid

--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -43,4 +43,5 @@ nav navbar-nav a {
   font-weight: bold;
   text-transform: uppercase;
   padding: .5em;
+  margin: 0 5px;
 }
